[Task CS-73] Endpoint for recruitment points (#34)
* Added points_sum endpoint

* tests, fixes, added route in app.py

* changed to POST, recruitment_id in request json

* changed to GET

* fix pylint by adding common function in response

* fixed tests
