# docs/api.yaml
@@ -337,6 +337,43 @@ paths:
             $ref: '#/definitions/TokenError'
       security:
         - JWT: []
+  /points/{recruitment_id}:
+    get:
+      tags:
+        - recruitment
+      summary: Gets the number of candidates that have gotten certain number of points
+      parameters:
+        - in: path
+          name: recruitment_id
+          schema:
+            type: integer
+          required: true
+          description: id of recruitment
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        200:
+          decription: Successfully gotten number of candidates for points they achieved
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/PointsSum'
+        400:
+          description: error during retrieving point from database
+          schema:
+            $ref: '#/definitions/Error'
+        401:
+          description: user is unauthenticated
+          schema:
+            $ref: '#/definitions/TokenError'
+        404:
+          description: Recruitment with such ID was not found
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+        - JWT: []
 
 definitions:
   CreateUserData:
@@ -624,3 +661,12 @@ definitions:
         point_limit:
           type: integer
           description: point limit of recruitment
+  PointsSum:
+    type: object
+    properties:
+      points:
+        description: number of points candidates achieved
+        type: integer
+      numberOfStudents:
+        description: number of students that have achieved these points
+        type: integer
